--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>zoosystem</artifactId>
+    <artifactId>ZooSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>zoosystem</name>
+    <name>ZooSystem</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
